# designer-port

./: CMakeLists.txt  QCACell.cpp  QCACell.h  QCAObject.cpp  QCAObject.h  WordRectangle.cpp  WordRectangle.h
